[package]
name = "webserv"
version = "0.1.0"
authors = ["Bradley"]
edition = "2018"

[dependencies]
# basic logging utilities
env_logger = "0.9.0"
log = "0.4.14"
# some libs for easy async and threading
futures = "0.3.16"
tokio = { version = "1.9.0", features = ["full"] }
rayon = "1.5.1"
# CLI argument parsing
clap = "2.33.3"

# file change events
notify = "~4.0"

# and some stuff I don't know why it isn't in std
rand = { version = "~0.8", features = ["std", "alloc", "getrandom", "std_rng", "log", "nightly", "simd_support"] }
bitflags = "1.2.1"
lazy_static = "1.4.0"